[package]
name = "nun-db-prometheus-exporter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "^1.4"
prometheus = { version = "0.13.0" }
tokio = { version = "^1.0", features = ["macros", "rt-multi-thread"] }
hyper = { version = "^0.14", features = ["server", "http1", "tcp"] }
reqwest = { version="*" , features = ["blocking"]}

